tests/errors/type_check/place_typing/place_downcast_on_non_enum_type.sim

        fn f(r: &i64) {
            x: i64;
            entry:
            x = copy r as Some;
            return
        }
        