tests/errors/type_check/place_typing/place_downcast_on_non_enum_type.err.expected
error: at 5:13: [TC-DowncastOfNonEnum] In function 'f', block 'entry': Cannot downcast non-enum type & i64
   |
 5 |             x = copy r as Some;
   |             ^^^^^^^^^^^^^^^^^^
error: at 5:13: [VF-DowncastOnProjection] In function 'f', block 'entry': cannot downcast 'r as Some' here: variant flow only tracks root Vars, and 'r' is a projection — extract into a local first
   |
 5 |             x = copy r as Some;
   |             ^^^^^^^^^^^^^^^^^^
